2016-07-04  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-07-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.17 released.

2016-07-03  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix line spacing adjustment of SSA/ASS.

	* Fix underline support in SSA/ASS.

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-07-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.16 released.

2016-07-02  Carl Hetherington  <cth@carlh.net>

	* Fix problems with markup in subrip/SSA/ASS.

	* Updated ru_RU translation from Igor Voytovich.

	* Updated uk_UA translation from Igor Voytovich.

	* Version 2.8.15 released.

2016-07-01  Carl Hetherington  <cth@carlh.net>

	* Add move-to-position dialogs when clicking on the preview timecode
	or frame number.

2016-06-29  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Increase frequency of progress reporting on long
	encodes (#900).

	* Obey specified colour conversion when previewing
	RGB and XYZ JPEG2000 files.

2016-06-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.14 released.

2016-06-24  c.hetherington  <cth@carlh.net>

	* Try again to make new file dialogue bigger on some platforms
	(#902).

2016-06-24  c.hetherington  <cth@carlh.net>

	* Support underlined subtitles.

2016-06-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.13 released.

2016-06-21  Carl Hetherington  <cth@carlh.net>

	* Make new file dialogue bigger on some platforms (#902).

2016-06-20  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix display of italic and bold font names in the fonts
	dialogue.

	* Updated pt_BR translation from Max M. Fuhlendorf.

	* Fix various strange crashes with encoding servers.

2016-06-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.12 released.
